# Mobile-Agent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/mobile_agent/: __init__.py  __main__.py  config.py  main.py  runner.py
tests/: test_config.py  test_runner.py
