[build-system]
requires = [
    "setuptools>=69",
]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-agent"
version = "0.1.1"
description = "Run a local Gemma GGUF model on Android through Termux and llama-cli."
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]
